# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/case/1": {
+        "/case/one1": {
             "post": {
                 "produces": [
                     "application/json"
@@ -12,7 +12,7 @@
                 "tags": [
                     "case"
                 ],
-                "summary": "测试接口1",
+                "summary": "测试接口1212",
                 "responses": {
                     "200": {
                         "description": "OK",
